FDU alignment fix, verbose diff, don't build Tune

--- a/Source/Apps/Makefile
+++ b/Source/Apps/Makefile
@@ -2,7 +2,8 @@ OBJECTS = SysGen.com Survey.com \
 	SysCopy.COM Assign.COM Format.COM Talk.COM OSLdr.COM Mode.COM RTC.COM \
 	Timer.COM IntTest.COM
 OTHERS = *.hex *.com
-SUBDIRS = XM FDU Tune FAT
+SUBDIRS = XM FDU FAT 
+# Tune - left out for now
 DEST = ../../Binary/Apps
 TOOLS =../../Tools
 RELPATH = Source/Apps
