--- a/Source/Makefile
+++ b/Source/Makefile
@@ -1,6 +1,12 @@
-NOTDONE = \
-	Doc CPNET ZCCP ZPM3 
-SUBDIRS = \
-	Prop Apps CPM22 ZCPR ZCPR-DJ ZSDOS CBIOS CPM3 Forth BPBIOS HBIOS Images
+NOTDONE = Doc
+SUBDIRS = Prop
+SUBDIRS += Apps CPM22 ZCPR ZCPR-DJ ZSDOS CBIOS CPM3
+SUBDIRS += ZPM3
+SUBDIRS += Forth
+NOTDONE += Fonts
+SUBDIRS += BL
+SUBDIRS += Images
+SUBDIRS += BPBIOS
+SUBDIRS += HBIOS
 TOOLS = ../Tools
 include $(TOOLS)/Makefile.inc
