--- a/Source/Apps/XM/Makefile
+++ b/Source/Apps/XM/Makefile
@@ -5,8 +5,8 @@ OTHERS = *.hex
 
 include $(TOOLS)/Makefile.inc
 
-xm.com: xmdm125.HEX xmhb.HEX
+xm.com: xmdm125.hex xmhb.hex
 	$(ZXCC) $(CPM)/MLOAD25 XM=xmdm125,xmhb
 
-xmuf.com: xmdm125.HEX xmuf.HEX
+xmuf.com: xmdm125.hex xmuf.hex
 	$(ZXCC) $(CPM)/MLOAD25 XMUF=xmdm125,xmuf
