--- a/Source/Apps/Makefile
+++ b/Source/Apps/Makefile
@@ -2,8 +2,7 @@ OBJECTS = SysGen.com Survey.com \
 	SysCopy.com Assign.com Format.com Talk.com OSLdr.com Mode.com RTC.com \
 	Timer.com IntTest.com
 OTHERS = *.hex *.com
-SUBDIRS = XM FDU FAT 
-# Tune - left out for now
+SUBDIRS = XM FDU FAT Tune
 DEST = ../../Binary/Apps
 TOOLS =../../Tools
 
