simplified due to removal of install rule

--- a/Source/Makefile
+++ b/Source/Makefile
@@ -6,11 +6,6 @@ SUBDIRS += Forth
 NOTDONE += Fonts
 SUBDIRS += BPBIOS
 SUBDIRS += HBIOS
+SUBDIRS += Images
 TOOLS = ../Tools
 include $(TOOLS)/Makefile.inc
-
-install:: SUBDIRS += Images
-
-clean:: SUBDIRS += Images
-
-clobber:: SUBDIRS += Images
