--- a/Source/HBIOS/Makefile
+++ b/Source/HBIOS/Makefile
@@ -1,10 +1,10 @@
-OBJECTS = platform
+OBJECTS = ZETA2_std.rom
 SUBDIRS = 
 DEST = ../../Binary/Apps
 TOOLS =../../Tools
 OTHERS =  *.bin *.z80 cpm.sys zsys.sys Build.inc
 include $(TOOLS)/Makefile.inc
 
-platform:
+ZETA2_std.rom:
 	bash Build.sh ZETA2 std 512
 
