--- a/Source/CPM3/Makefile
+++ b/Source/CPM3/Makefile
@@ -4,8 +4,8 @@
 #
 # it does this by overriding OBJECTS in an invoked sub-make
 #
-OBJECTS = cpmldr.com cpm3res cpm3bnk zpmbios3 cpm3.sys gencpm.dat
-OTHERS = cpmldr.rel biosldr.rel cpm3res.sys cpm3bnk.sys zpmbios3.spr
+OBJECTS = cpmldr.com cpmldr.sys cpm3res cpm3bnk zpmbios3 cpm3.sys gencpm.dat
+OTHERS = cpmldr.rel biosldr.rel cpm3res.sys cpm3bnk.sys zpmbios3.spr loader.bin cpmldr.bin
 
 TOOLS = ../../Tools
 include $(TOOLS)/Makefile.inc
@@ -51,6 +51,24 @@ zpmbios3:
 	make OBJECTS=zpmbios3.spr
 	rm gencpm.dat
 
+cpmldr.bin:	biosldrd.rel cpmldr.rel
+	$(ZXCC) $(TOOLS)/cpm/bin/LINK -CPMLDRD[L100]=CPMLDR,BIOSLDRD
+	mv cpmldrd.com cpmldr.bin
+
+cpmldr.com: biosldrc.rel cpmldr.rel
+	$(ZXCC) $(TOOLS)/cpm/bin/LINK -CPMLDRC[L100]=CPMLDR,BIOSLDRC
+	mv cpmldrc.com cpmldr.com
+
+biosldrc.rel: biosldr.z80 optcmd.lib
+	cp optcmd.lib ldropts.lib	
+	$(ZXCC) $(TOOLS)/cpm/bin/Z80ASM -BIOSLDR/MF
+	mv biosldr.rel biosldrc.rel
+
+biosldrd.rel: biosldr.z80 optdsk.lib
+	cp optdsk.lib ldropts.lib	
+	$(ZXCC) $(TOOLS)/cpm/bin/Z80ASM -BIOSLDR/MF
+	mv biosldr.rel biosldrd.rel
+ 
 bios3.spr: $(BIOSOBJS)
 	$(ZXCC) $(CPM)/LINK -bios3[OS]=$(BIOSNAMES)
 
@@ -60,13 +78,11 @@ bnkbios3.spr: $(BIOSOBJS)
 zpmbios3.spr: $(BIOSOBJS)
 	$(ZXCC) $(TOOLS)/cpm/bin/LINK -zpmbios3[B]=$(BIOSNAMES)
 
-cpmldr.com: cpmldr.rel biosldr.rel
-	$(ZXCC) $(TOOLS)/cpm/bin/LINK -cpmldr[L100]=cpmldr,biosldr
-	rm -f cpmldr.sym
-
 cpm3.sys: cpm3$(DEFCPM3).sys
 	cp cpm3$(DEFCPM3).sys cpm3.sys
 
 gencpm.dat: gen$(DEFCPM3).dat
 	cp gen$(DEFCPM3).dat gencpm.dat
 
+cpmldr.sys: loader.bin cpmldr.bin
+	cat loader.bin cpmldr.bin > $@
