--- a/Source/Makefile
+++ b/Source/Makefile
@@ -1,6 +1,11 @@
+#
+# order is actually important, because of build dependencies
+#
 NOTDONE = Doc
 SUBDIRS = Prop
-SUBDIRS += Apps CPM22 ZCPR ZCPR-DJ ZSDOS CBIOS CPM3
+SUBDIRS += Apps 
+SUBDIRS += CBIOS HBIOS 
+SUBDIRS += CPM22 ZCPR ZCPR-DJ ZSDOS CPM3
 SUBDIRS += ZPM3
 SUBDIRS += Forth
 NOTDONE += Fonts
