avoid having any non-tunes in Tunes directory

--- a/Source/Apps/Tune/Makefile
+++ b/Source/Apps/Tune/Makefile
@@ -1,4 +1,3 @@
-SUBDIRS = Tunes
 OBJECTS = Tune.com
 DEST = ../../../Binary/Apps
 TOOLS = ../../../Tools
@@ -7,3 +6,6 @@ include $(TOOLS)/Makefile.inc
 
 Tune.com: Tune.asm
 	$(TASM) Tune.asm Tune.com
+
+all::
+	cp Tunes/* $(DEST)/Tunes
